<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_converter"
        android:textSize="28sp"
        android:layout_marginStart="60dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        android:textAlignment="gravity"/>


    <TextView
        android:id="@+id/tv_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/us"
        android:textSize="20sp"
        android:layout_marginTop="150dp"
        android:layout_marginStart="50dp"
        />

    <EditText
        android:id="@+id/et_us"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_toEndOf="@id/tv_us"
        android:layout_marginTop="138dp"
        android:layout_marginStart="45dp"
        android:hint="@string/us_amount"
        android:textSize="24sp"
        android:textAlignment="center"
        android:visibility="visible"
        android:inputType="numberDecimal"
        android:background="@drawable/edit_text_look"
        android:visible="true"/>
    <TextView
        android:id="@+id/tv_ksh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ksh"
        android:textSize="18sp"
        android:layout_marginTop="220dp"
        android:layout_marginStart="50dp"/>
    <EditText
        android:background="@drawable/edit_text_look"
        android:id="@+id/tv_displayksh"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:hint="@string/kes_amount"
        android:textSize="24sp"
        android:textAlignment="center"
        android:layout_toEndOf="@id/tv_ksh"
        android:layout_marginTop="200dp"
        android:layout_marginStart="20dp"
        android:inputType="numberDecimal" />


    <Button
        android:id="@+id/btn_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/convert"
        android:layout_marginTop="300dp"
        android:layout_marginStart="50dp"/>
    <Button
        android:id="@+id/btn_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:onClick="exit"
        android:layout_marginTop="300dp"
        android:layout_marginStart="200dp"/>

    <Button
        android:layout_width="35dp"
        android:layout_height="34dp"
        android:background="@drawable/refresh_button"
        android:onClick="refresh"
        android:layout_marginTop="310dp"
        android:layout_marginStart="150dp"/>


</RelativeLayout>